@@ -682,6 +682,7 @@ Localization
         #LOC_BDArmory_MinEvasionTime = Min Evasion Time
         #LOC_BDArmory_EvasionNonlinearity = Evasion/Extension Nonlinearity
         #LOC_BDArmory_EvasionThreshold = Evasion Distance Threshold
+        #LOC_BDArmory_EvasionErraticness = RCS Evasion Erraticness
         #LOC_BDArmory_EvasionTimeThreshold = Evasion Time Threshold	
         #LOC_BDArmory_EvasionMinRangeThreshold = Evasion Min Range Threshold
         #LOC_BDArmory_EvasionIgnoreMyTargetTargetingMe = Don't Evade My Target
